[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"


[dev-dependencies]
reqwest = "0.11"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"


[dependencies]
actix-web = "4.0.0-beta.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }